--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -400,32 +400,30 @@
     "    bars['close_original'] = bars['close']\n",
     "    bars['turnover'] = bars['volume'] * bars['close_original']\n",
     "\n",
-    "    if not os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker}.csv\"):\n",
-    "        return bars[['open', 'high', 'low', 'close', 'close_original', 'turnover']]\n",
-    "    \n",
-    "    adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker}.csv\", parse_dates=True, index_col=0)\n",
-    "    adjustments.index = pd.to_datetime(adjustments.index).date\n",
-    "    trading_dates_ticker = sorted(list(set(bars.index.date)))\n",
-    "    adjustments = adjustments[(adjustments.index > trading_dates_ticker[0]) & (adjustments.index <= trading_dates_ticker[-1])]\n",
+    "    if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker}.csv\"):\n",
+    "        adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker}.csv\", parse_dates=True, index_col=0)\n",
+    "        adjustments.index = pd.to_datetime(adjustments.index).date\n",
+    "        trading_dates_ticker = sorted(list(set(bars.index.date)))\n",
+    "        adjustments = adjustments[(adjustments.index > trading_dates_ticker[0]) & (adjustments.index <= trading_dates_ticker[-1])]\n",
     "\n",
-    "    splits = adjustments[adjustments.type == \"SPLIT\"].copy()\n",
+    "        splits = adjustments[adjustments.type == \"SPLIT\"].copy()\n",
     "\n",
-    "    # Adjust for splits\n",
-    "    if not splits.empty:\n",
-    "        splits['cumulative_adjustment'] = splits['amount'][::-1].cumprod()\n",
-    "        splits = splits.drop(columns=['type', 'subtype', 'amount'])\n",
-    "        splits.index = splits.index.map(lambda day : max(d for d in trading_dates_ticker if d < day))\n",
-    "        splits = splits.reindex(trading_dates_ticker) # Reindex using stock data \n",
-    "        splits.cumulative_adjustment = splits.cumulative_adjustment.fillna(method='bfill').fillna(value=1) \n",
+    "        # Adjust for splits\n",
+    "        if not splits.empty:\n",
+    "            splits['cumulative_adjustment'] = splits['amount'][::-1].cumprod()\n",
+    "            splits = splits.drop(columns=['type', 'subtype', 'amount'])\n",
+    "            splits.index = splits.index.map(lambda day : max(d for d in trading_dates_ticker if d < day))\n",
+    "            splits = splits.reindex(trading_dates_ticker) # Reindex using stock data \n",
+    "            splits.cumulative_adjustment = splits.cumulative_adjustment.fillna(method='bfill').fillna(value=1) \n",
     "\n",
-    "        # Merge adjustments with the bars and adjust\n",
-    "        bars['date'] = bars.index.date\n",
-    "        bars = bars.merge(splits, left_on='date', right_index=True, how='left')\n",
-    "        bars['close_original'] = bars['close']\n",
-    "        bars[['open', 'high', 'low', 'close']] = bars[['open', 'high', 'low', 'close']].\\\n",
-    "            multiply(bars[\"cumulative_adjustment\"], axis=\"index\")\n",
+    "            # Merge adjustments with the bars and adjust\n",
+    "            bars['date'] = bars.index.date\n",
+    "            bars = bars.merge(splits, left_on='date', right_index=True, how='left')\n",
+    "            bars['close_original'] = bars['close']\n",
+    "            bars[['open', 'high', 'low', 'close']] = bars[['open', 'high', 'low', 'close']].\\\n",
+    "                multiply(bars[\"cumulative_adjustment\"], axis=\"index\")\n",
     "\n",
-    "        bars.drop(columns=['cumulative_adjustment', 'date'], inplace=True)\n",
+    "            bars.drop(columns=['cumulative_adjustment', 'date'], inplace=True)\n",
     "\n",
     "    return bars[['open', 'high', 'low', 'close', 'close_original', 'turnover']]"
    ]
@@ -986,58 +984,56 @@
     "    Dividend-adjust the 1-minute bars.\n",
     "    \"\"\"\n",
     "    if not os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker}.csv\"):\n",
-    "        return split_adjusted_bars\n",
-    "    \n",
-    "    trading_dates_ticker = sorted(list(set(split_adjusted_bars.index.date)))\n",
+    "        trading_dates_ticker = sorted(list(set(split_adjusted_bars.index.date)))\n",
     "\n",
-    "    adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker}.csv\", parse_dates=True, index_col=0)\n",
-    "    adjustments.index = pd.to_datetime(adjustments.index).date\n",
-    "    adjustments = adjustments[(adjustments.index > trading_dates_ticker[0]) & \\\n",
-    "                                (adjustments.index <= trading_dates_ticker[-1])]\n",
-    "    split_adjusted_dividends = adjustments[adjustments.type == \"DIV\"].copy()\n",
-    "    \n",
-    "    all_adjusted_bars = split_adjusted_bars.copy()\n",
-    "\n",
-    "    if not split_adjusted_dividends.empty:\n",
-    "        # Get cum div date\n",
-    "        split_adjusted_dividends['cum_div_date'] = split_adjusted_dividends.index.map(\\\n",
-    "            lambda day : max(d for d in trading_dates_ticker if d < day))\n",
+    "        adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker}.csv\", parse_dates=True, index_col=0)\n",
+    "        adjustments.index = pd.to_datetime(adjustments.index).date\n",
+    "        adjustments = adjustments[(adjustments.index > trading_dates_ticker[0]) & \\\n",
+    "                                    (adjustments.index <= trading_dates_ticker[-1])]\n",
+    "        split_adjusted_dividends = adjustments[adjustments.type == \"DIV\"].copy()\n",
     "        \n",
-    "        split_adjusted_dividends = split_adjusted_dividends[['amount', 'cum_div_date']]\n",
-    "        split_adjusted_dividends.index.names = ['ex_div_date']\n",
+    "        all_adjusted_bars = split_adjusted_bars.copy()\n",
     "\n",
-    "        # We need to get the ex-dividend closing price. Most days this is on 16:00 ET. Some days have early closes.\n",
-    "        market_hours = get_market_calendar('datetime')\n",
-    "        market_hours = market_hours[['regular_close']]\n",
+    "        if not split_adjusted_dividends.empty:\n",
+    "            # Get cum div date\n",
+    "            split_adjusted_dividends['cum_div_date'] = split_adjusted_dividends.index.map(\\\n",
+    "                lambda day : max(d for d in trading_dates_ticker if d < day))\n",
+    "            \n",
+    "            split_adjusted_dividends = split_adjusted_dividends[['amount', 'cum_div_date']]\n",
+    "            split_adjusted_dividends.index.names = ['ex_div_date']\n",
     "\n",
-    "        split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_date'], inplace=True)\n",
-    "        split_adjusted_dividends['cum_div_datetime'] = market_hours.loc[split_adjusted_dividends.index, 'regular_close']\n",
+    "            # We need to get the ex-dividend closing price. Most days this is on 16:00 ET. Some days have early closes.\n",
+    "            market_hours = get_market_calendar('datetime')\n",
+    "            market_hours = market_hours[['regular_close']]\n",
     "\n",
-    "        # Sometimes the latest trade of the day is NOT the 15:59 bar exactly. \n",
-    "        # So we need to get the latest available price at or before the close.\n",
-    "        split_adjusted_dividends['cum_div_datetime'] = split_adjusted_dividends['cum_div_datetime'].apply(\\\n",
-    "            lambda dt : (split_adjusted_bars[split_adjusted_bars.index <= dt].index).max())\n",
-    "        split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_datetime'], inplace=True)\n",
-    "        split_adjusted_dividends['cum_div_close'] = split_adjusted_bars.loc[split_adjusted_dividends['cum_div_datetime'], 'close']\n",
+    "            split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_date'], inplace=True)\n",
+    "            split_adjusted_dividends['cum_div_datetime'] = market_hours.loc[split_adjusted_dividends.index, 'regular_close']\n",
     "\n",
-    "        # Calculate adjustments\n",
-    "        split_adjusted_dividends['adjustment'] = 1 - (split_adjusted_dividends['amount'] / split_adjusted_dividends['cum_div_close'])\n",
-    "        split_adjusted_dividends['cumulative_adjustment'] = split_adjusted_dividends['adjustment'][::-1].cumprod()\n",
+    "            # Sometimes the latest trade of the day is NOT the 15:59 bar exactly. \n",
+    "            # So we need to get the latest available price at or before the close.\n",
+    "            split_adjusted_dividends['cum_div_datetime'] = split_adjusted_dividends['cum_div_datetime'].apply(\\\n",
+    "                lambda dt : (split_adjusted_bars[split_adjusted_bars.index <= dt].index).max())\n",
+    "            split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_datetime'], inplace=True)\n",
+    "            split_adjusted_dividends['cum_div_close'] = split_adjusted_bars.loc[split_adjusted_dividends['cum_div_datetime'], 'close']\n",
     "\n",
-    "        split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_date'], inplace=True, drop=True)\n",
-    "        dividend_adjustments = split_adjusted_dividends[['cumulative_adjustment']]\n",
+    "            # Calculate adjustments\n",
+    "            split_adjusted_dividends['adjustment'] = 1 - (split_adjusted_dividends['amount'] / split_adjusted_dividends['cum_div_close'])\n",
+    "            split_adjusted_dividends['cumulative_adjustment'] = split_adjusted_dividends['adjustment'][::-1].cumprod()\n",
     "\n",
-    "        dividend_adjustments = dividend_adjustments.reindex(trading_dates_ticker) # Reindex using stock data \n",
-    "        dividend_adjustments['cumulative_adjustment'] = dividend_adjustments['cumulative_adjustment'].\\\n",
-    "            fillna(method='bfill').fillna(value=1) # Backward fill and fill ones\n",
+    "            split_adjusted_dividends.set_index(split_adjusted_dividends['cum_div_date'], inplace=True, drop=True)\n",
+    "            dividend_adjustments = split_adjusted_dividends[['cumulative_adjustment']]\n",
     "\n",
-    "        # Same procedure as with split adjustments\n",
-    "        all_adjusted_bars['date'] = all_adjusted_bars.index.date\n",
-    "        all_adjusted_bars = all_adjusted_bars.merge(dividend_adjustments, left_on='date', right_index=True, how='left')\n",
-    "        all_adjusted_bars[['open', 'high', 'low', 'close']] = all_adjusted_bars[['open', 'high', 'low', 'close']].\\\n",
-    "            multiply(all_adjusted_bars[\"cumulative_adjustment\"], axis=\"index\")\n",
+    "            dividend_adjustments = dividend_adjustments.reindex(trading_dates_ticker) # Reindex using stock data \n",
+    "            dividend_adjustments['cumulative_adjustment'] = dividend_adjustments['cumulative_adjustment'].\\\n",
+    "                fillna(method='bfill').fillna(value=1) # Backward fill and fill ones\n",
     "\n",
-    "        all_adjusted_bars.drop(columns=['cumulative_adjustment', 'date'], inplace=True)\n",
+    "            # Same procedure as with split adjustments\n",
+    "            all_adjusted_bars['date'] = all_adjusted_bars.index.date\n",
+    "            all_adjusted_bars = all_adjusted_bars.merge(dividend_adjustments, left_on='date', right_index=True, how='left')\n",
+    "            all_adjusted_bars[['open', 'high', 'low', 'close']] = all_adjusted_bars[['open', 'high', 'low', 'close']].\\\n",
+    "                multiply(all_adjusted_bars[\"cumulative_adjustment\"], axis=\"index\")\n",
+    "\n",
+    "            all_adjusted_bars.drop(columns=['cumulative_adjustment', 'date'], inplace=True)\n",
     "\n",
     "    # Round to 4 decimals\n",
     "    return round(all_adjusted_bars, 4)"
@@ -1381,6 +1377,9 @@
     "    # ROUNDING: TO 4 DECIMALS, TURNOVER TO INT\n",
     "    all_adjusted = round(all_adjusted, 4)\n",
     "    all_adjusted['turnover'] = all_adjusted['turnover'].astype(int)\n",
+    "\n",
+    "    if (all_adjusted['close'] < 0).any():\n",
+    "        raise Exception(f'{id} has negative prices!')\n",
     "    \n",
     "    all_adjusted.to_parquet(DATA_PATH + f\"processed/m1/{id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)"
    ]
