--- a/13_backtester_loop.ipynb
+++ b/13_backtester_loop.ipynb
@@ -14,20 +14,21 @@
     "* Slow\n",
     "* Possible to introduce look-ahead bias. To avoid this, you should be very careful with which data you access. If a backtest looks very good, cross-check the entry/exits.\n",
     "\n",
-    "I want to make this backtester as simple as possible. However for some things, OOP makes things much easier. We will explain these objects first. However we will use way less OOP than my other github repo QS_Extended. \n",
+    "I want to make this backtester as simple as possible. In my other repo QS_Extended, almost everything was OOP. However I find that this makes things a bit more complicated. So here I will avoid OOP unless it drastically simplifies things. For simulating a Portfolio, this makes things much easier. We will explain the Portfolio object below.\n",
     "\n",
     "All objects and helper functions are in the 'backtester' folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, date, time\n",
     "from times import get_market_dates, get_market_calendar, last_trading_date_before\n",
     "from data import get_data\n",
+    "from tickers import get_tickers\n",
     "from backtester.portfolio import Portfolio\n",
     "import json\n",
     "import pandas as pd\n",
@@ -40,8 +41,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.1 The Portfolio object\n",
-    "This simulates a portfolio. When an order gets filled, the values within the portfolio are updated. Also, at the end of the day (or how often we wish), the portfolio logs itself. It also keeps track of all fills."
+    "### 13.1 The Portfolio object and performance module\n",
+    "\n",
+    "This simulates a portfolio. The portfolio has certain attributes such as the amount of cash and holdings. And several functions such as what it should do when an order gets filled. It also keeps an internal log, which we can update as often as we want (we do this every end of the day). The logs are of the portfolio itself and the fills that the portfolio got."
    ]
   },
   {
@@ -90,7 +92,7 @@
     "            previous_close_dt,\n",
     "            market_close_dt,\n",
     "            1,\n",
-    "            columns=[\"open\", \"close\", \"halted\"],\n",
+    "            columns=[\"open\", \"close\", \"tradeable\"],\n",
     "        )\n",
     "\n",
     "    # Calculate gaps\n",
@@ -139,33 +141,6 @@
     "    print(day)\n",
     "\n",
     "    portfolio.append_portfolio_log(market_close_dt, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Look into 'IVR-2019-06-03' problem of negative prices. Then check all stocks on negative prices."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'VLCN-2021-10-06'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gapper"
    ]
   },
   {
@@ -702,7 +677,7 @@
     }
    ],
    "source": [
-    "trade_log[trade_log['net P/L %'] < -50]"
+    "trade_log[trade_log['net P/L %'] < -100]"
    ]
   },
   {
