--- a/x_get_fundamentals.ipynb
+++ b/x_get_fundamentals.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Fundamentals (discontinued)\n",
-    "Fundamentals are discontinued because I mainly trade technical and fundamentals are cumbersome.\n",
+    "**Fundamentals are discontinued because I mainly trade technical and fundamentals are cumbersome.**\n",
     "\n",
     "The fundamentals that I want are:\n",
     "* Easy to get:\n",
