--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
     "for index, row in tickers.iterrows():\n",
     "    id = row['ID']\n",
     "    \n",
-    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=True, \\\n",
+    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, extended_hours=False, \\\n",
     "                  columns=['open', 'close', 'turnover', 'close_original'])\n",
     "\n",
     "    if m1.empty:\n",
@@ -202,7 +202,7 @@
     "# for index, row in tickers.iterrows():\n",
     "#     id = row['ID']\n",
     "\n",
-    "#     m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
+    "#     m1 = get_data(id, START_DATE, END_DATE, timeframe=5, extended_hours=True, \\\n",
     "#                   columns=['open', 'close', 'turnover', 'close_original'])\n",
     "\n",
     "#     if m1.empty:\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +256,9 @@
     "for index, row in tickers.iterrows():\n",
     "    id = row['ID']\n",
     "\n",
-    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, regular_hours_only=False, \\\n",
-    "                  columns=['close', 'volume', 'close_original'])\n",
-    "    d1 = get_data(id, START_DATE, END_DATE, timeframe='daily', regular_hours_only=True, \\\n",
+    "    m1 = get_data(id, START_DATE, END_DATE, timeframe=5, extended_hours=True, \\\n",
+    "                  columns=['close', 'turnover', 'close_original'])\n",
+    "    d1 = get_data(id, START_DATE, END_DATE, timeframe='daily', extended_hours=False, \\\n",
     "                  columns=['close'])\n",
     "\n",
     "    if m1.empty:\n",
