portfolio now references data

--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -1347,7 +1347,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.6 Putting it all in a loop"
+    "# 7.6 Putting it all in a loop\n",
+    "Later on, I got an error which was caused by stock prices being negative. This is caused by some special events (with a dividend type of 'SC'), where Polygon has already adjusted for it... We avoid this problem by manually deleting the dividend in the adjustment:\n",
+    "* GEN: 2020-02-03\n",
+    "* LIAN: 2024-02-26"
    ]
   },
   {
@@ -1382,15 +1385,6 @@
     "        raise Exception(f'{id} has negative prices!')\n",
     "    \n",
     "    all_adjusted.to_parquet(DATA_PATH + f\"processed/m1/{id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Later on, I got an error which was caused by stock prices being negative. This is caused by some special events (with a dividend type of 'SC'), where Polygon has already adjusted for it... We avoid this problem by manually deleting the dividend in the adjustment:\n",
-    "* GEN: 2020-02-03\n",
-    "* LIAN: 2024-02-26"
    ]
   },
   {
