--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -156,20 +156,21 @@
     "    m1_close.index = m1_close.index.date\n",
     "\n",
     "    # Get the turnover (ignoring early closes...)\n",
-    "    m1_volume = m1_volume.between_time('9:30', '15:54')\n",
-    "    m1_volume.index = m1_volume.index.date\n",
-    "    m1_volume = m1_volume.groupby(m1_volume.index).agg({\"turnover\": \"sum\"})\n",
-    "    m1_volume = m1_volume[['turnover']]\n",
+    "    m1_turnover = m1_turnover.between_time('9:30', '15:54')\n",
+    "    m1_turnover.index = m1_turnover.index.date\n",
+    "    m1_turnover = m1_turnover.groupby(m1_turnover.index).agg({\"turnover\": \"sum\"})\n",
+    "    m1_turnover = m1_turnover[['turnover']]\n",
     "\n",
     "    # Calculate the drop and append to dates_and_IDs\n",
-    "    m1_open_close = pd.concat([m1_open, m1_close, m1_volume], axis='columns')\n",
-    "    m1_open_close['change'] = (1 - m1_open_close['close']/m1_open_close['open'])*100 # Base 100\n",
+    "    m1_open_close = pd.concat([m1_open, m1_close, m1_turnover], axis='columns')\n",
+    "    m1_open_close['change'] = (m1_open_close['close']/m1_open_close['open'] - 1)*100 # Base 100\n",
     "    big_drop = m1_open_close[(m1_open_close['change'] < -20) \\\n",
     "                           & (m1_open_close['close_original'] >= 1.00)\\\n",
     "                           & (m1_open_close['turnover'] >= 1e7)]\n",
     "\n",
     "    for day in big_drop.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
+    "    print(index)\n",
     "        \n",
     "# Store to json\n",
     "with open('../data/output/dailyscreens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
