fixed bug in dividend adjustments, changed screener

--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
     "    \"\"\"\n",
     "    Dividend-adjust the 1-minute bars.\n",
     "    \"\"\"\n",
-    "    if not os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker}.csv\"):\n",
+    "    if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker}.csv\"):\n",
     "        trading_dates_ticker = sorted(list(set(split_adjusted_bars.index.date)))\n",
     "\n",
     "        adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker}.csv\", parse_dates=True, index_col=0)\n",
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
