--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -82,18 +82,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>from</th>\n",
        "      <th>to</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-06-09</th>\n",
+       "      <th>4013</th>\n",
+       "      <td>2022-06-09</td>\n",
        "      <td>FB</td>\n",
        "      <td>META</td>\n",
        "    </tr>\n",
@@ -102,9 +99,8 @@
        "</div>"
       ],
       "text/plain": [
-       "           from    to\n",
-       "date                 \n",
-       "2022-06-09   FB  META"
+       "            date from    to\n",
+       "4013  2022-06-09   FB  META"
       ]
      },
      "execution_count": 3,
@@ -113,6 +109,7 @@
     }
    ],
    "source": [
+    "ticker_changes = pd.read_csv(DATA_PATH + \"../stockanalysis/ticker_changes.csv\")\n",
     "print(len(ticker_changes))\n",
     "ticker_changes[ticker_changes['from'] == \"FB\"]"
    ]
@@ -145,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +165,7 @@
     "        end_date_from = row_from['end_date']\n",
     "        start_data_from = row_from['start_data']\n",
     "        end_data_from = row_from['end_data']\n",
+    "\n",
     "        if end_data_from == END_DATE:\n",
     "            continue\n",
     "\n",
@@ -256,7 +254,7 @@
     "    if index_from >= (len(tickers_v4)-1):\n",
     "        break\n",
     "\n",
-    "tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
+    "# tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
    ]
   },
   {
