--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "    print(end_datetime)\n",
     "\n",
     "# Store to json\n",
-    "with open('../data/output/dailyscreens/T500.json', 'w') as f: \n",
+    "with open('../output/screens/T500.json', 'w') as f: \n",
     "    json.dump(dates_and_IDs, f)"
    ]
   },
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "with open('../data/output/dailyscreens/T500.json', 'r') as f: \n",
+    "with open('../output/screens/T500.json', 'r') as f: \n",
     "    T500 = json.load(f)\n",
     "\n",
     "T500[date(2019, 6, 28).isoformat()][:5]"
@@ -114,8 +114,8 @@
    "metadata": {},
    "source": [
     "**More than 20% intraday droppers**\n",
-    "* Open to 5 minutes before close\n",
-    "* Turnover for the day has to be at least $10M\n",
+    "* Common stocks only\n",
+    "* Turnover for the day has to be at least $5M\n",
     "* Original price has to be above $1"
    ]
   },
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "tickers = get_tickers()\n",
-    "tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
+    "tickers = tickers[tickers['type'].isin(['CS'])]\n",
     "\n",
     "# Get list of market dates within our range\n",
     "dates = get_market_dates(START_DATE, END_DATE)\n",
@@ -156,7 +156,7 @@
     "    m1_close.index = m1_close.index.date\n",
     "\n",
     "    # Get the turnover (ignoring early closes...)\n",
-    "    m1_turnover = m1_turnover.between_time('9:30', '15:54')\n",
+    "    m1_turnover = m1_turnover.between_time('9:30', '15:55')\n",
     "    m1_turnover.index = m1_turnover.index.date\n",
     "    m1_turnover = m1_turnover.groupby(m1_turnover.index).agg({\"turnover\": \"sum\"})\n",
     "    m1_turnover = m1_turnover[['turnover']]\n",
@@ -166,14 +166,14 @@
     "    m1_open_close['change'] = (m1_open_close['close']/m1_open_close['open'] - 1)*100 # Base 100\n",
     "    big_drop = m1_open_close[(m1_open_close['change'] < -20) \\\n",
     "                           & (m1_open_close['close_original'] >= 1.00)\\\n",
-    "                           & (m1_open_close['turnover'] >= 1e7)]\n",
+    "                           & (m1_open_close['turnover'] >= 5_000_000)]\n",
     "\n",
     "    for day in big_drop.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
     "    print(index)\n",
     "        \n",
     "# Store to json\n",
-    "with open('../data/output/dailyscreens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
+    "with open('../output/screens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
     "    json.dump(dates_and_IDs, f)"
    ]
   },
@@ -227,7 +227,7 @@
     "#         dates_and_IDs[day.isoformat()].append(id)\n",
     "    \n",
     "# # # Store to json\n",
-    "# with open('../data/output/dailyscreens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
+    "# with open('../output/screens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
     "#     json.dump(dates_and_IDs, f)"
    ]
   },
@@ -288,7 +288,7 @@
     "        dates_and_IDs[day.isoformat()].append(id)\n",
     "\n",
     "# # Store to json\n",
-    "with open('../data/output/dailyscreens/GAP_30PCT.json', 'w') as f: \n",
+    "with open('../output/screens/GAP_30PCT.json', 'w') as f: \n",
     "    json.dump(dates_and_IDs, f)"
    ]
   },
